feat: update OdontogramRequest to use idQuestion and add idPatientClinicalHistory; refactor OdontogramService methods for improved clarity