@@ -38,7 +38,6 @@ public class OdontogramService {
     private final AnswerService answerService;
     private final PatientClinicalHistoryService patientClinicalHistoryService;
 
-
     @Transactional(readOnly = true)
     public OdontogramResponse getOdontogramById(@NonNull Long id) {
         try {
@@ -113,13 +112,15 @@ public class OdontogramService {
             
             var patientClinicalHistory = patientClinicalHistoryService.findByPatient(odontogramDTO.getIdPatient());
 
-            answerService.save(
-                AnswerRequest.builder()
-                .idQuestion(odontogramDTO.getIdFormSection())
-                .idPatientClinicalHistory(patientClinicalHistory.getFirst().getIdPatientClinicalHistory())
-                .answerText("")
-                .build()
-            );
+            answerService.saveBatch(
+                    List.of(
+                            AnswerRequest.builder()
+                                    .idQuestion(odontogramDTO.getIdFormSection())
+                                    .idPatientClinicalHistory(
+                                            odontogramDTO.getIdPatientClinicalHistory())
+                                    .answerText("")
+                                    .idQuestion(null)
+                                    .build()));
 
         } catch (DataIntegrityViolationException e) {
             throw new AppException("Duplicate entry", HttpStatus.CONFLICT, e);
@@ -132,16 +133,15 @@ public class OdontogramService {
     public OdontogramResponse getOdontogramDetails(String patientId) {
 
         Long odontogramId = getLatestOdontogramIdByPatient(patientId).orElseThrow(
-                () -> new AppException("Odontogram not found with ID: " + patientId, HttpStatus.NOT_FOUND)
-        );
+                () -> new AppException("Odontogram not found with ID: " + patientId, HttpStatus.NOT_FOUND));
 
         // Obtener todas las asignaciones de condiciones de dientes
-        List<ToothConditionAssignmentModel> toothConditionAssignments =
-                odontogramRepository.findToothConditionAssignmentsByOdontogramId(odontogramId);
+        List<ToothConditionAssignmentModel> toothConditionAssignments = odontogramRepository
+                .findToothConditionAssignmentsByOdontogramId(odontogramId);
 
         // Obtener todas las condiciones de caras de dientes
-        List<ToothfaceConditionsAssignmentModel> toothFaceConditions =
-                odontogramRepository.findToothFaceConditionsAssignmentByOdontogramId(odontogramId);
+        List<ToothfaceConditionsAssignmentModel> toothFaceConditions = odontogramRepository
+                .findToothFaceConditionsAssignmentByOdontogramId(odontogramId);
 
         // Mapa para agrupar los datos por diente
         Map<String, ToothResponse> adultTeethMap = new HashMap<>();
@@ -161,14 +161,12 @@ public class OdontogramService {
             if (tca.getTooth().isAdult()) {
                 ToothResponse adultTheetResponse = adultTeethMap.computeIfAbsent(
                         tca.getTooth().getIdTooth(),
-                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>())
-                );
+                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>()));
                 adultTheetResponse.getConditions().add(conditionDTO);
             } else {
                 ToothResponse childTeethResponse = childTeethMap.computeIfAbsent(
                         tca.getTooth().getIdTooth(),
-                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>())
-                );
+                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>()));
                 childTeethResponse.getConditions().add(conditionDTO);
             }
 
@@ -187,15 +185,15 @@ public class OdontogramService {
             if (tfca.getTooth().isAdult()) {
                 ToothResponse adultToothResponse = adultTeethMap.computeIfAbsent(
                         tfca.getTooth().getIdTooth(),
-                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>())
-                );
+                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>()));
 
                 // Buscar o crear la FaceDTO
                 FaceResponse adultFace = adultToothResponse.getFaces().stream()
                         .filter(f -> f.getIdFace().equals(tfca.getToothFace().getIdToothFace()))
                         .findFirst()
                         .orElseGet(() -> {
-                            FaceResponse newFace = new FaceResponse(tfca.getToothFace().getIdToothFace(), new ArrayList<>());
+                            FaceResponse newFace = new FaceResponse(tfca.getToothFace().getIdToothFace(),
+                                    new ArrayList<>());
                             adultToothResponse.getFaces().add(newFace);
                             return newFace;
                         });
@@ -205,15 +203,15 @@ public class OdontogramService {
             } else {
                 ToothResponse childToothResponse = childTeethMap.computeIfAbsent(
                         tfca.getTooth().getIdTooth(),
-                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>())
-                );
+                        id -> new ToothResponse(id, new ArrayList<>(), new ArrayList<>()));
 
                 // Buscar o crear la FaceDTO
                 FaceResponse childFace = childToothResponse.getFaces().stream()
                         .filter(f -> f.getIdFace().equals(tfca.getToothFace().getIdToothFace()))
                         .findFirst()
                         .orElseGet(() -> {
-                            FaceResponse newFace = new FaceResponse(tfca.getToothFace().getIdToothFace(), new ArrayList<>());
+                            FaceResponse newFace = new FaceResponse(tfca.getToothFace().getIdToothFace(),
+                                    new ArrayList<>());
                             childToothResponse.getFaces().add(newFace);
                             return newFace;
                         });
@@ -222,13 +220,11 @@ public class OdontogramService {
                 childFace.getConditions().add(conditionDTO);
             }
 
-
         }
 
         // Crear la lista de ToothDTO a partir del mapa
         List<ToothResponse> adultToothResponseList = new ArrayList<>(adultTeethMap.values());
         List<ToothResponse> childToothResponseList = new ArrayList<>(childTeethMap.values());
-
 
         // Crear y devolver el OdontogramDTO
         return OdontogramResponse.builder()
@@ -240,6 +236,7 @@ public class OdontogramService {
 
     public Optional<Long> getLatestOdontogramIdByPatient(String patientId) {
         List<Long> results = odontogramRepository.findOdontogramIdsByPatient(patientId, PageRequest.of(0, 1));
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
     }
+
 }
